<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/tools"
    android:id="@+id/login_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/goodog"
                android:textColor="@color/colorPrimary"
                android:text="Login"
                android:layout_marginBottom="24dp"
                android:textSize="24dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:hint="@string/shr_hint_username"
            android:id="@+id/username_login_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/username_login_text"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_login_input"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:hint="@string/shr_hint_password"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.button.MaterialButton
            android:id="@+id/cancels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:layout_centerInParent="true"
            android:textColor="@color/primaryTextColor"
            android:text="@string/shr_button_next2" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>